<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.basicacttest.MainActivity">
    <item
        android:id="@+id/calendar_icon"
        android:orderInCategory="1"
        android:title="@string/actions_cal"
        android:icon="@android:drawable/ic_menu_my_calendar"
        app:showAsAction="always"/>

    <item
        android:id="@+id/time"
        android:orderInCategory="2"
        android:title="@string/actions_time"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        app:showAsAction="always"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="3"
        android:title="@string/actions_exit"
        android:icon="@android:drawable/ic_delete"
        app:showAsAction="always" />

</menu>